internal/xds/translator/testdata/out/xds-ir/authorization-client-cert-combined.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - www.example.com
    name: envoy-gateway/gateway-1/http/www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /foo
      name: httproute/default/httproute-1/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.rbac:
          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
          rbac:
            matcher:
              matcherList:
                matchers:
                - onMatch:
                    action:
                      name: allow-subject-and-san
                      typedConfig:
                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                        name: ALLOW
                  predicate:
                    andMatcher:
                      predicate:
                      - singlePredicate:
                          input:
                            name: client_cert_subject
                            typedConfig:
                              '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput
                          valueMatch:
                            exact: CN=allowed-client,O=Envoy Gateway Tests
                      - orMatcher:
                          predicate:
                          - singlePredicate:
                              input:
                                name: client_cert_uri_san
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput
                              valueMatch:
                                exact: spiffe://envoy-gateway/tests/clientcert/allowed
                          - singlePredicate:
                              input:
                                name: client_cert_dns_san
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput
                              valueMatch:
                                exact: allowed-client.svc.cluster.local
              onNoMatch:
                action:
                  name: default
                  typedConfig:
                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                    action: DENY
                    name: DENY
